--- a/frontend/src/components/Login/index.css
+++ b/frontend/src/components/Login/index.css
@@ -82,7 +82,8 @@ body {
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  width: 50%;
+  width: 40%;
+  height:38px;
 }
 
 .login-btn:hover {
